# signature-page-system

./: .gitignore  AGENTS.md  README.md  签字页模版样例.md  签字页管理系统 MVP 实现方案.md
backend/: alembic.ini  pyproject.toml  requirements.txt  start_backend.sh
backend/alembic/: env.py
backend/alembic/versions/: 36b2b8e9161f_add_workflow_id_to_generation_tasks.py  70c6c3675292_add_generation_task_id_to_generated_.py  a83ec3548e76_initial_schema.py  ddf5113c762c_add_generation_audit_logs_and_template_.py
backend/app/: __init__.py  database.py  exceptions.py  main.py  models.py  schemas.py  types.py
backend/app/routers/: generation.py  health.py  projects.py  templates.py  variables.py
backend/app/services/: __init__.py  ai_guardrail.py  ai_service.py  generation_service.py  project_service.py  render_utils.py  template_service.py  variable_registry.py  variable_service.py
backend/app/services/llm/: __init__.py  base.py  factory.py  longcat_provider.py  mock_provider.py  mock_responses.py  openai_provider.py  opencode_provider.py
backend/app/templates/: institutional_shareholder_signing_page.docx  natural_shareholder_signing_page.docx
backend/app/temporal/: __init__.py  __main__.py  client.py  config.py  task_queues.py  worker.py
backend/app/temporal/activities/: __init__.py  ai.py  generation.py
backend/app/temporal/workflows/: __init__.py  ai.py  (+1 more)
backend/scripts/: create_preset_templates.py  test_validate.py
backend/tests/: conftest.py  helpers.py  test_ai.py  test_e2e_flow.py  test_excel.py  test_generation.py  test_projects.py  test_templates_variables.py
(+86 files in other folders)
